--- a/CSS_Sample_Program_1.html
+++ b/CSS_Sample_Program_1.html
@@ -2,17 +2,40 @@
 <html>
     <head>
         <meta charset = "utf-8">
+        <!-- Internal CSS -- Here we are adding style to web page internally.
+        <style>
+            body {
+                background-color: #f3dfe3;
+            }
+            h1{
+                color: #142850;
+            }
+            h2{
+                color: #142850;
+        }
+            hr {
+                border-style: none;
+                border-color: grey;
+                border-top-style: dotted;
+                border-width: 5px;
+                width: 5%;
+            }
+        </style>
+        -->
+        <!--  External CSS -- Here we are creating css Sheet in different Folder and Call that css style sheet as per below Element-->
+        <link rel="stylesheet" href="CSS/Style.css">
+
 
     </head>
     <title>Sample_Resume_Using HTML_And_CSS</title>
-    <body style = "background-color : #77D8D8">
+    <body>
         <h1 align = center>Resume</h1>
         <table cellspacing = "5">
             <tr>
                 <td><img src="Images/Sainath.jpg" alt="Venkata Sainath Paidakula"></td>
                 <td><h1>Venkata Sainath Paidakula</h1>
                     <h4>Designation     : IIB & Frount-End Developer</h4>
-                    <h4>Branch          : Electrical & Electronic Engineering</h4>
+                     <h4>Branch          : Electrical & Electronic Engineering</h4>
                     <h4>College         : St.Anns College Of Engineering & Technology Chirala</h4>
                     <h4>University      : JNTUK</h4>
                 </td>
@@ -20,8 +43,11 @@
         </table>
         <hr>
         <h2>Professional Summary</h2>
-        <p>If you want to see my Profie Summary Please go through the given link.</p>
+        <p>If you want to see my Profie Summary Please gothrough the given link.</p>
         <p><strong>Link : <a href="file:///D:/Mylife/JavaScript/GitHub_Projects/WebDevelopment_HTML/Profile_Summary.html">Professional Summary</a></strong></p>
         <hr>
         <h2>Education and Certifications</h2>
-        <p></p>
+        <p>If you want to see My Education Profile. Please gothrough the below mentioned Link.</p>
+        <p><strong>Link : <a href="">Educational Details</a></strong></p>
+    </body>
+</html>
