--- a/Profile_Summary.html
+++ b/Profile_Summary.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+            <link rel="stylesheet" href="CSS/Style.css">
+    </head>
     <body>
         <h2><u><strong>Profile Sumary</strong></u></h2>
         <ul>
